// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SWITCH using sheet NATIVE 1`] = `
Array [
  "
##########################################
##########################################
#
#  NATIVE, MOBILE
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  Array [
    "margin: 0 /*sheet.root/$widths.0-640*/",
  ],
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  "
margin: 0 /*sheet.root/$widths.0-640*/",
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  Object {
    "margin": 0,
  },
]
`;

exports[`SWITCH using sheet NATIVE 2`] = `
Array [
  "
##########################################
##########################################
#
#  NATIVE, TABLET
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  Array [
    "margin: 10 /*sheet.root/$widths.640-1024*/",
  ],
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  "
margin: 10 /*sheet.root/$widths.640-1024*/",
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  Object {
    "margin": 10,
  },
]
`;

exports[`SWITCH using sheet WEB 1`] = `
Array [
  "
##########################################
##########################################
#
#  WEB, MOBILE
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  "
@media (max-width: 639px).a { margin:0 /*sheet.root/$widths.0-640*/ }
@media (min-width: 640px) and (max-width: 1023px).b { margin:10px /*sheet.root/$widths.640-1024*/ }
@media (min-width: 1024px).c { margin:20px /*sheet.root/$widths.1024-*/ }
@media (max-width: 639px).d:hover { color:blue /*sheet.root/$web/:hover/$widths.0-640*/ }
@media (max-width: 639px).e:hover { padding:0 /*sheet.root/$web/:hover/$widths.0-640*/ }
@media (min-width: 640px) and (max-width: 1023px).f:hover { color:red /*sheet.root/$web/:hover/$widths.640-1024*/ }
@media (min-width: 640px) and (max-width: 1023px).g:hover { padding:10px /*sheet.root/$web/:hover/$widths.640-1024*/ }
@media (min-width: 1024px).h:hover { padding:20px /*sheet.root/$web/:hover/$widths.1024-*/ }",
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  "
@media (min-width: 1024px).h:hover { padding:20px /*sheet.root/$web/:hover/$widths.1024-*/ }
@media (min-width: 640px) and (max-width: 1023px).g:hover { padding:10px /*sheet.root/$web/:hover/$widths.640-1024*/ }
@media (min-width: 640px) and (max-width: 1023px).f:hover { color:red /*sheet.root/$web/:hover/$widths.640-1024*/ }
@media (max-width: 639px).e:hover { padding:0 /*sheet.root/$web/:hover/$widths.0-640*/ }
@media (max-width: 639px).d:hover { color:blue /*sheet.root/$web/:hover/$widths.0-640*/ }
@media (min-width: 1024px).c { margin:20px /*sheet.root/$widths.1024-*/ }
@media (min-width: 640px) and (max-width: 1023px).b { margin:10px /*sheet.root/$widths.640-1024*/ }
@media (max-width: 639px).a { margin:0 /*sheet.root/$widths.0-640*/ }",
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  "h g f e d c b a",
]
`;

exports[`SWITCH using sheet WEB 2`] = `
Array [
  "
##########################################
##########################################
#
#  WEB, TABLET
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  "
@media (max-width: 639px).a { margin:0 /*sheet.root/$widths.0-640*/ }
@media (min-width: 640px) and (max-width: 1023px).b { margin:10px /*sheet.root/$widths.640-1024*/ }
@media (min-width: 1024px).c { margin:20px /*sheet.root/$widths.1024-*/ }
@media (max-width: 639px).d:hover { color:blue /*sheet.root/$web/:hover/$widths.0-640*/ }
@media (max-width: 639px).e:hover { padding:0 /*sheet.root/$web/:hover/$widths.0-640*/ }
@media (min-width: 640px) and (max-width: 1023px).f:hover { color:red /*sheet.root/$web/:hover/$widths.640-1024*/ }
@media (min-width: 640px) and (max-width: 1023px).g:hover { padding:10px /*sheet.root/$web/:hover/$widths.640-1024*/ }
@media (min-width: 1024px).h:hover { padding:20px /*sheet.root/$web/:hover/$widths.1024-*/ }",
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  "
@media (min-width: 1024px).h:hover { padding:20px /*sheet.root/$web/:hover/$widths.1024-*/ }
@media (min-width: 640px) and (max-width: 1023px).g:hover { padding:10px /*sheet.root/$web/:hover/$widths.640-1024*/ }
@media (min-width: 640px) and (max-width: 1023px).f:hover { color:red /*sheet.root/$web/:hover/$widths.640-1024*/ }
@media (max-width: 639px).e:hover { padding:0 /*sheet.root/$web/:hover/$widths.0-640*/ }
@media (max-width: 639px).d:hover { color:blue /*sheet.root/$web/:hover/$widths.0-640*/ }
@media (min-width: 1024px).c { margin:20px /*sheet.root/$widths.1024-*/ }
@media (min-width: 640px) and (max-width: 1023px).b { margin:10px /*sheet.root/$widths.640-1024*/ }
@media (max-width: 639px).a { margin:0 /*sheet.root/$widths.0-640*/ }",
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  "h g f e d c b a",
]
`;

exports[`WIDTHS define sheet NATIVE 1`] = `
Object {
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "margin: 0 /*sheet.root/$widths.0-640*/",
        ],
        "conditions": Array [
          Object {
            "interval": Array [
              0,
              640,
            ],
            "type": "$widths",
          },
        ],
      },
      Object {
        "atomicArray": Array [
          "margin: 10 /*sheet.root/$widths.640-1024*/",
        ],
        "conditions": Array [
          Object {
            "interval": Array [
              640,
              1024,
            ],
            "type": "$widths",
          },
        ],
      },
      Object {
        "atomicArray": Array [
          "margin: 20 /*sheet.root/$widths.1024-*/",
        ],
        "conditions": Array [
          Object {
            "interval": Array [
              1024,
              0,
            ],
            "type": "$widths",
          },
        ],
      },
    ],
    "name": "root",
    "~": "c",
  },
}
`;

exports[`WIDTHS define sheet WEB 1`] = `
Object {
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "@media (max-width: 639px).a { margin:0 /*sheet.root/$widths.0-640*/ }",
        ],
      },
      Object {
        "atomicArray": Array [
          "@media (min-width: 640px) and (max-width: 1023px).b { margin:10px /*sheet.root/$widths.640-1024*/ }",
        ],
      },
      Object {
        "atomicArray": Array [
          "@media (min-width: 1024px).c { margin:20px /*sheet.root/$widths.1024-*/ }",
        ],
      },
      Object {
        "atomicArray": Array [
          "@media (max-width: 639px).d:hover { color:blue /*sheet.root/$web/:hover/$widths.0-640*/ }",
          "@media (max-width: 639px).e:hover { padding:0 /*sheet.root/$web/:hover/$widths.0-640*/ }",
        ],
      },
      Object {
        "atomicArray": Array [
          "@media (min-width: 640px) and (max-width: 1023px).f:hover { color:red /*sheet.root/$web/:hover/$widths.640-1024*/ }",
          "@media (min-width: 640px) and (max-width: 1023px).g:hover { padding:10px /*sheet.root/$web/:hover/$widths.640-1024*/ }",
        ],
      },
      Object {
        "atomicArray": Array [
          "@media (min-width: 1024px).h:hover { padding:20px /*sheet.root/$web/:hover/$widths.1024-*/ }",
        ],
      },
    ],
    "name": "root",
    "~": "c",
  },
}
`;
